js/src/tests/test262/built-ins/Number/NEGATIVE_INFINITY/S15.7.3.5_A2.js
verifyNotWritable
(
Number
"
NEGATIVE_INFINITY
"
null
1
)
;
assert
(
!
isFinite
(
Number
.
NEGATIVE_INFINITY
)
'
The
value
of
!
isFinite
(
Number
.
NEGATIVE_INFINITY
)
is
expected
to
be
true
'
)
;
reportCompare
(
0
0
)
;
